# dgrec

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  Untitled.ipynb  index.html  pyproject.toml  q  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
API/: analysis.html  cli.html  encoding.html  evolution.html  genotypes.html  genotypes_paired.html  library_size.html  likelihood_lstm.html  lstm.html  plotting.html  predictions.html  utils.html
DGRec/: __init__.py  _modidx.py  core.py  plotting.py  utils.py
DGRec data analysis/: 01_library_size_estimation.html  mutation_distribution.html
dgrec/: DGRec_model.py  LSTM.py  __init__.py  _modidx.py  analysis.py  cli.py  core.py  encoding.py  encoding_bis.py  evolution.py  genotypes.py  genotypes_paired.py  library_size.py  lstm.py  pairwise2.py  plotting.py  predictions.py  predictions_bis.py  utils.py
dgrec/example_data/: LSTM_model_8_16.keras  __init__.py  e_TRSpAvd_classifier.pkl  e_TRSp_classifier.pkl  example1_ref.fasta  sacB_genotypes.csv  sacB_ref.fasta  whole_model.pkl
dgrec/model_parameters/: LSTM_model.keras  __init__.py  model_mms_2024_02_14.pickle
nbs/: 00_core.ipynb  01_plotting.ipynb  01_utils.ipynb  02_utils.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/API/: 00_core.ipynb  00_genotypes.ipynb  01_genotypes_paired.ipynb  01_plotting.ipynb  02_plotting.ipynb  02_utils.ipynb  03_analysis.ipynb  04_encoding.ipynb  04_encoding_bis.ipynb  05_predictions.ipynb  05_predictions_bis.ipynb  06_evolution.ipynb  07_utils.ipynb  08_cli.ipynb  09_likelihood_LSTM.ipynb  09_lstm.ipynb  test.csv  (+1 more)
(+2 files in other folders)
