[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dgrec"
dynamic = ["version"]
description = "Analysing DGRec data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "David Bikard", email = "david.bikard@pasteur.fr"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'pandas', 'biopython', 'click', 'matplotlib', 'seaborn', 'tqdm', 'scikit-learn==1.7.1', 'logomaker', 'svgwrite']

[project.urls]
Repository = "https://github.com/dbikard/dgrec"
Documentation = "https://dbikard.github.io/dgrec"

[project.entry-points.nbdev]
dgrec = "dgrec._modidx:d"

[project.optional-dependencies]
lstm = ['tensorflow==2.17']
dev = ['ViennaRNA', 'cython']


[project.scripts]
dgrec = "dgrec.cli:dgrec"

[tool.setuptools.dynamic]
version = {attr = "dgrec.__version__"}

[tool.setuptools.packages.find]
include = ["dgrec"]

[tool.nbdev]
jupyter_hooks = true
custom_sidebar = false
